--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up – KlipsVault</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -34,8 +34,9 @@
     </div>
   </section>
 
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="auth.js"></script>
 
 
 </body>
 </html>
+
