--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
     <p>Epic Internet Moment</p>
   </div>
 
-  <div class="clip-card">
-    <div class="clip-thumb"></div>
-    <p>Trending Right Now</p>
+  <div class="clip-card locked">
+  <div class="premium-badge">PREMIUM</div>
+
+  <div class="clip-thumb"></div>
+
+  <div class="lock-overlay">
+    <div class="lock-icon">🔒</div>
+    <span>Premium Clip</span>
+    <button class="unlock-btn">Unlock Premium</button>
   </div>
+</div>
+
 </div>
   </section>
 
@@ -51,4 +59,5 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
